# k8s-vgpu-scheduler

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Makefile  README.md  README_cn.md  build.sh  config.yml  device_plugin.sh  go.mod  go.sum  hami-2.0.0.tgz  index.yaml  main.go  mig-strategy.go  nvidia-device-plugin-master.yml  nvidia-device-plugin.yml  nvidia.go  pod1.yml  post-install.sh  run_device_plugin.sh  run_scheduler.sh  server.go  sources.list  vdevice-controller.go  vdevice.go  vgpu-2.0.0.tgz
.github/workflows/: main.yml
charts/vgpu/: Chart.yaml  values.yaml
charts/vgpu/templates/scheduler/: configmap.yaml  configmapnew.yaml
docker/: Dockerfile  Dockerfile.fromlocal  Dockerfile.ubi8  Dockerfile.ubuntu20.04
docs/: benchmark.md
docs/develop/: design.md  protocol.md  roadmap.md
hack/: build.sh
libvgpu/: CMakeLists.txt  README.md  build.sh
libvgpu/dockerfiles/: Dockerfile.aarch64  Dockerfile.x86_64
libvgpu/framework_test/: Dockerfile  README.md  config.toml  go.mod  go.sum  mindspore_test.go  nccl_test.go  pytorch_test.go  run.sh  tensorflow_test.go  vgpu_suite_test.go
libvgpu/framework_test/clients/: dockerclient.go  nvmlclient.go
libvgpu/framework_test/config/: parsor.go
libvgpu/src/: CMakeLists.txt  libvgpu.c  static_config.h.in  utils.c
libvgpu/src/allocator/: CMakeLists.txt  allocator.c  allocator.h
libvgpu/src/cuda/: CMakeLists.txt  context.c  device.c  event.c  graph.c  hook.c  memory.c  stream.c
libvgpu/src/include/: cuda_addition_func.h  libcuda_hook.h  libnvml_hook.h  libvgpu.h  log_utils.h  memory_limit.h  nvml-subset.h  nvml_override.h  nvml_prefix.h  process_utils.h  utils.h
libvgpu/src/multiprocess/: CMakeLists.txt  common_header.h  multiprocess_memory_limit.c  multiprocess_memory_limit.h  multiprocess_utilization_watcher.c  multiprocess_utilization_watcher.h  shrreg_tool.c
libvgpu/src/nvml/: CMakeLists.txt  hook.c  nvml_entry.c
libvgpu/test/: CMakeLists.txt  test_alloc.c  test_alloc_hold.c  test_alloc_host.c  test_alloc_managed.c  test_alloc_pitch.c  test_create_3d_array.c  test_create_array.c  test_host_alloc.c  test_host_register.c  test_runtime_alloc.c  test_runtime_alloc_host.c  test_runtime_alloc_managed.c  test_runtime_host_alloc.c  test_runtime_host_register.c  test_runtime_launch.cu  test_utils.h
libvgpu/test/python/: limit_mxnet.py  limit_pytorch.py  limit_tensorflow.py  limit_tensorflow2.py
pkg/device/: devices.go
pkg/device-plugin/nvidiadevice/nvinternal/plugin/: server.go
pkg/device/iluvatar/: device.go
pkg/device/nvidia/: device.go
pkg/k8sutil/: pod.go
pkg/scheduler/: scheduler.go  scheduler_test.go  score.go
pkg/util/: util.go
workloads/: deployment.yml  pod.yml  quotas-compute-resources.yml  resnet-high-epochs.yml  resnet.yml
